Fix vertical-spacing mixin when dealing with visually-hidden elements

--- a/source/_patterns/00-config/01-mixins/_mixins.vertical-spacing.scss
+++ b/source/_patterns/00-config/01-mixins/_mixins.vertical-spacing.scss
@@ -4,12 +4,12 @@
 // @param {String} $bottom-spacing - Spacing to add after this element.
 @mixin vertical-spacing($top-spacing: 1em, $bottom-spacing: $top-spacing) {
   // Add top margin when preceded by another element.
-  * + & {
+  *:not(.visually-hidden) + & {
     margin-top: $top-spacing;
   }
 
   // Add top margin to element directly after this.
-  + * {
+  &:not(.visually-hidden) + * {
     margin-top: $bottom-spacing;
   }
 }
